--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST=0.0.0.0
+HOST=127.0.0.1
 PORT=4000
 NODE_ENV=development
 APP_NAME=AdonisJs
@@ -12,3 +12,5 @@ DB_USER=root
 DB_PASSWORD=
 DB_DATABASE=covidverify
 HASH_DRIVER=bcrypt
+
+DIALOG_FLOW_TOKEN=64a93cb25e244697adf3f9c06b36566c
