--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/validator": "^5.0.6",
+    "axios": "^0.19.2",
     "mysql": "^2.18.1",
     "socket.io": "^2.3.0",
     "url-parse": "^1.4.7"
