--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=Dwkrr1BaoxiL7EsIDaHJQYrLQ6ejK2Fp
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-iron-east-01.cleardb.net
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=covidverify
+DB_USER=b209a1b020fa7c
+DB_PASSWORD=ef938f0c
+DB_DATABASE=heroku_2d22fa4d2079c7f
 HASH_DRIVER=bcrypt
 
 DIALOG_FLOW_TOKEN=5b33da72815f4220bd7e01743a61acac
