update the code

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-HOST=0.0.0.0
-PORT=4000
+HOST=localhost
+PORT=5000
 NODE_ENV=development
 APP_NAME=AdonisJs
 APP_URL=http://${HOST}:${PORT}
@@ -14,3 +14,4 @@ DB_DATABASE=heroku_2d22fa4d2079c7f
 HASH_DRIVER=bcrypt
 
 DIALOG_FLOW_TOKEN=80bd84f7289b48bb8fe7629819f66385
+
