--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=Dwkrr1BaoxiL7EsIDaHJQYrLQ6ejK2Fp
 DB_CONNECTION=mysql
-DB_HOST=us-cdbr-iron-east-01.cleardb.net
+DB_HOST=us-cdbr-east-06.cleardb.net
 DB_PORT=3306
-DB_USER=b209a1b020fa7c
-DB_PASSWORD=ef938f0c
-DB_DATABASE=heroku_2d22fa4d2079c7f
+DB_USER=be02aa568ff190
+DB_PASSWORD=28c0311a
+DB_DATABASE=heroku_dea35ecdf471f7b
 HASH_DRIVER=bcrypt
 
 DIALOG_FLOW_TOKEN=80bd84f7289b48bb8fe7629819f66385
