--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@ node_modules
 tmp
 
 # Environment variables, never commit this file
-.envy
+.env
 
 # The development sqlite file
 database/*.sqlite
+
+# ignore ewoma private
+config/ewoma.js
