--- a/.env
+++ b/.env
@@ -12,6 +12,8 @@ DB_USER=be02aa568ff190
 DB_PASSWORD=28c0311a
 DB_DATABASE=heroku_dea35ecdf471f7b
 HASH_DRIVER=bcrypt
-
+GMAIL_USER=developerjuni@gmail.com
+GMAIL_PASS=@pass1234567890
+EWOMA_EMAIL=covid19verify@gmail.com
 DIALOG_FLOW_TOKEN=80bd84f7289b48bb8fe7629819f66385
 
