--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dialogflow": "^1.2.0",
     "googleapis": "^49.0.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.6",
     "socket.io": "^2.3.0",
     "url-parse": "^1.4.7"
   },
