--- a/.env
+++ b/.env
@@ -1,19 +1,27 @@
-HOST=0.0.0.0
-PORT=5000
+HOST=127.0.0.1
+PORT=8200
 NODE_ENV=development
-APP_NAME=AdonisJs
+APP_NAME=Sorosoke
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
-APP_KEY=Dwkrr1BaoxiL7EsIDaHJQYrLQ6ejK2Fp
+APP_KEY=Dwkrr1BaoxiL7Esj7TdksdGyshI9e33nd39b
 DB_CONNECTION=mysql
+
 DB_HOST=us-cdbr-east-06.cleardb.net
 DB_PORT=3306
 DB_USER=be02aa568ff190
 DB_PASSWORD=28c0311a
 DB_DATABASE=heroku_dea35ecdf471f7b
+
 HASH_DRIVER=bcrypt
+
 GMAIL_USER=developerjuni@gmail.com
 GMAIL_PASS=@pass1234567890
-EWOMA_EMAIL=covid19verify@gmail.com
-DIALOG_FLOW_TOKEN=80bd84f7289b48bb8fe7629819f66385
 
+EWOMA_EMAIL=covid19verify@gmail.com
+
+TWITTER_CALLBACK_URL=http://127.0.0.1:8080/auth/twitter/callback.html
+TWITTER_API_KEY=LGoAIhpfYKIk7iGq141soAunU
+TWITTER_API_SECRET=M9fOarlzjaCs54OsmO6iZ9l1VRBAXJNIvJAZqK3XXrPd2jffUm
+TWITTER_ACCESS_TOKEN=1315987797287804933-BETfIZ8LRrXi8RmlzEg3hvms2bknN5
+TWITTER_ACCESS_TOKEN_SECRET=I4oENagRlvXpY2n7UYcDgfdKRWVfiYht4jusChLRmNija
