--- a/package.json
+++ b/package.json
@@ -24,14 +24,22 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/redis": "^2.0.7",
     "@adonisjs/validator": "^5.0.6",
     "@google-cloud/dialogflow": "^2.0.0",
+    "adonis-cache": "^0.3.4",
     "axios": "^0.19.2",
+    "dayjs": "^1.9.1",
     "dialogflow": "^1.2.0",
-    "googleapis": "^49.0.0",
+    "googleapis": "^61.0.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.6",
+    "passport-twitter": "^1.0.4",
+    "querystring": "^0.2.0",
     "socket.io": "^2.3.0",
+    "sqlite3": "^5.0.0",
+    "twit": "^2.2.11",
+    "twittersignin": "^1.2.0",
     "url-parse": "^1.4.7"
   },
   "devDependencies": {},
