fix the backend api

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ GMAIL_PASS=@pass1234567890
 
 EWOMA_EMAIL=covid19verify@gmail.com
 
-TWITTER_CALLBACK_URL=http://127.0.0.1:8080/auth/twitter/callback.html
+TWITTER_CALLBACK_URL=https://unruffled-kilby-8e1c19.netlify.app/auth/twitter/callback.html
 TWITTER_API_KEY=LGoAIhpfYKIk7iGq141soAunU
 TWITTER_API_SECRET=M9fOarlzjaCs54OsmO6iZ9l1VRBAXJNIvJAZqK3XXrPd2jffUm
 TWITTER_ACCESS_TOKEN=1315987797287804933-BETfIZ8LRrXi8RmlzEg3hvms2bknN5
