--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
-HOST=0.0.0.0
+HOST=127.0.0.1
 PORT=8200
 NODE_ENV=development
 APP_NAME=Sorosoke
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=Dwkrr1BaoxiL7Esj7TdksdGyshI9e33nd39b
+
+FRONTEND_URL=http://127.0.0.1:8080
+
 DB_CONNECTION=mysql
 
 DB_HOST=us-cdbr-east-06.cleardb.net
@@ -20,7 +23,7 @@ GMAIL_PASS=@pass1234567890
 
 EWOMA_EMAIL=covid19verify@gmail.com
 
-TWITTER_CALLBACK_URL=https://unruffled-kilby-8e1c19.netlify.app/auth/twitter/callback.html
+TWITTER_CALLBACK_URL=${FRONTEND_URL}/auth/twitter/callback.html
 TWITTER_API_KEY=LGoAIhpfYKIk7iGq141soAunU
 TWITTER_API_SECRET=M9fOarlzjaCs54OsmO6iZ9l1VRBAXJNIvJAZqK3XXrPd2jffUm
 TWITTER_ACCESS_TOKEN=1315987797287804933-BETfIZ8LRrXi8RmlzEg3hvms2bknN5
