--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST=127.0.0.1
+HOST=0.0.0.0
 PORT=8200
 NODE_ENV=development
 APP_NAME=Sorosoke
@@ -16,12 +16,21 @@ DB_USER=be02aa568ff190
 DB_PASSWORD=28c0311a
 DB_DATABASE=heroku_dea35ecdf471f7b
 
+#Cloudinary Credentials
+CLOUDINARY_CLOUD_NAME=getfiledata
+CLOUDINARY_API_KEY=811293528829713
+CLOUDINARY_API_SECRET=MTv32-FLRPKqeBg1uUO-UUnimGI
+CLOUDINARY_APP_FOLDER=sorosoke
+CLOUDINARY_IMAGE_URL=https://res.cloudinary.com/getfiledata/image/upload/v1603168773/
+CLOUDINARY_VIDEO_URL=https://res.cloudinary.com/getfiledata/video/upload/v1603168773/
+
 HASH_DRIVER=bcrypt
 
 GMAIL_USER=developerjuni@gmail.com
 GMAIL_PASS=@pass1234567890
 
-EWOMA_EMAIL=covid19verify@gmail.com
+SOROSOKO_GOOGLE_EMAIL=covid19verify@gmail.com
+SOROSOKO_GOOGLE_PASSWORD=chinonso2020
 
 TWITTER_CALLBACK_URL=${FRONTEND_URL}/auth/twitter/callback.html
 TWITTER_API_KEY=LGoAIhpfYKIk7iGq141soAunU
