--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,11 @@ DB_USER=root
 DB_PASSWORD=
 DB_DATABASE=adonis
 
+
+DB_HOST=us-cdbr-east-06.cleardb.net
+DB_PORT=3306
+DB_USER=be02aa568ff190
+DB_PASSWORD=28c0311a
+DB_DATABASE=heroku_dea35ecdf471f7b
+
 HASH_DRIVER=bcrypt
