--- a/package.json
+++ b/package.json
@@ -29,18 +29,26 @@
     "@google-cloud/dialogflow": "^2.0.0",
     "adonis-cache": "^0.3.4",
     "axios": "^0.19.2",
+    "bug-killer": "^4.4.4",
+    "cloudinary": "^1.22.0",
     "dayjs": "^1.9.1",
     "dialogflow": "^1.2.0",
+    "google-auth-library": "^6.1.1",
     "googleapis": "^61.0.0",
+    "lien": "^3.3.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.6",
+    "opn": "^6.0.0",
     "passport-twitter": "^1.0.4",
     "querystring": "^0.2.0",
+    "r-json": "^1.2.10",
     "socket.io": "^2.3.0",
     "sqlite3": "^5.0.0",
     "twit": "^2.2.11",
     "twittersignin": "^1.2.0",
-    "url-parse": "^1.4.7"
+    "url-parse": "^1.4.7",
+    "youtube-api": "^3.0.1",
+    "youtube-video-api": "^0.3.7"
   },
   "devDependencies": {},
   "autoload": {
