--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 HOST=0.0.0.0
 PORT=8200
-NODE_ENV=development
+NODE_ENV=production
 APP_NAME=Sorosoke
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=Dwkrr1BaoxiL7Esj7TdksdGyshI9e33nd39b
 
-FRONTEND_URL=http://127.0.0.1:8080
+FRONTEND_URL=https://unruffled-kilby-8e1c19.netlify.app
 
 DB_CONNECTION=mysql
 
