--- a/.env
+++ b/.env
@@ -1,20 +1,21 @@
-HOST=0.0.0.0
+HOST=127.0.0.1
 PORT=8200
-NODE_ENV=production
+NODE_ENV=development
 APP_NAME=Sorosoke
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=Dwkrr1BaoxiL7Esj7TdksdGyshI9e33nd39b
 
-FRONTEND_URL=https://unruffled-kilby-8e1c19.netlify.app
+FRONTEND_URL=http://127.0.0.1:8080
 
 DB_CONNECTION=mysql
 
-DB_HOST=us-cdbr-east-06.cleardb.net
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_USER=be02aa568ff190
-DB_PASSWORD=28c0311a
-DB_DATABASE=heroku_dea35ecdf471f7b
+DB_USER=root
+DB_PASSWORD=
+DB_DATABASE=adonis
+
 
 #Cloudinary Credentials
 CLOUDINARY_CLOUD_NAME=getfiledata
