--- a/.env
+++ b/.env
@@ -1,21 +1,20 @@
-HOST=127.0.0.1
+HOST=0.0.0.0
 PORT=8200
-NODE_ENV=development
+NODE_ENV=production
 APP_NAME=Sorosoke
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=Dwkrr1BaoxiL7Esj7TdksdGyshI9e33nd39b
 
-FRONTEND_URL=http://127.0.0.1:8080
+FRONTEND_URL=https://unruffled-kilby-8e1c19.netlify.app
 
 DB_CONNECTION=mysql
 
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-east-06.cleardb.net
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=sorosoke
-
+DB_USER=be02aa568ff190
+DB_PASSWORD=28c0311a
+DB_DATABASE=heroku_dea35ecdf471f7b
 
 #Cloudinary Credentials
 CLOUDINARY_CLOUD_NAME=getfiledata
